[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Images/K.O. icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LoadingScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/W95FA.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "Fading"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Loading:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Loading2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Loading3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.2, 1.201 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "Unfading"
tracks/0/type = "value"
tracks/0/path = NodePath("Transition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
color = Color( 0.717647, 0.470588, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KO icon" type="Sprite" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Transition" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Label" parent="."]
margin_left = 416.793
margin_top = 472.645
margin_right = 575.793
margin_bottom = 520.645
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Loading"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading2" type="Label" parent="."]
margin_left = 594.276
margin_top = 475.22
margin_right = 604.276
margin_bottom = 523.22
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading3" type="Label" parent="."]
margin_left = 607.07
margin_top = 475.108
margin_right = 617.07
margin_bottom = 523.108
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading4" type="Label" parent="."]
margin_left = 580.538
margin_top = 474.781
margin_right = 590.538
margin_bottom = 522.781
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="LoadingScreen" type="AnimationPlayer" parent="."]
anims/Fading = SubResource( 2 )
anims/Loading... = SubResource( 3 )
anims/Unfading = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="LoadingScreen" to="." method="_on_LoadingScreen_animation_finished"]
